[tool.poetry]
name = "PaperAgent"
version = "0.1.0"
description = "An AI-powered assistant that lowers the bar-to-entry into specialized niches by providing an elaborate literature review."
authors = ["Jinal.Shah <28205508+JinalShah2002@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
arxiv = "^2.1.3"
anthropic = "^0.30.1"
python-dotenv = "^1.0.1"
PyPDF2 = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
